--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.17.2",
+    "@mantine/dates": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
+    "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.3",
+    "framer-motion": "^12.5.0",
+    "lucide-react": "^0.482.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
